[291] improved UserSpecification tests